--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Anondroid5
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/anondroid5/anondroid5.github.io/blob/master/images/anondroid5.jpg
+avatar: ![_config.yml](images/anondroid5.jpg)
 
 #
 # Flags below are optional
