--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Anondroid5
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ![_config.yml](images/jekyll-logo.png)
+avatar: ./images/anondroid5.jpg
 
 #
 # Flags below are optional
