--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Anondroid5
+name: anondroid5
 
 # Short bio or description (displayed in the header)
 description: Whether you're trying to make a lot of money or whether you just want to change the world, computer programming is an incredibly empowering skill to learn.
