--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: anondroid5
 
 # Short bio or description (displayed in the header)
-description: Whether you're trying to make a lot of money or whether you just want to change the world, computer programming is an incredibly empowering skill to learn.
+description: Computer programming is an incredibly empowering skill to learn.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/5197882
