--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: ドロイド機械帝国
+name: ドロイドさんの機械帝国
 
 # Short bio or description (displayed in the header)
 description: Computer programming is an incredibly empowering skill to learn.
